--- a/app/details/details.html
+++ b/app/details/details.html
@@ -1,5 +1,7 @@
 <div>
     <h1>{{record.detail2}} - {{record.detail4}}</h1>
+    <h2><a href="javascript:void(0);">Approve</a></h2>
+    <h2><a href="javascript:void(0);">Reject</a></h2>
     <div style="display: inline-block" >
         <h1>History</h1>
         <div>
