login page changes

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,8 @@
   <title>My AngularJS App</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="bower_components/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="bower_components/bootstrap/css/bootstrap-responsive.css">
   <link rel="stylesheet" href="css/login.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/app.css">
@@ -17,6 +19,7 @@
   <div ng-view></div>
 
   <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/bootstrap/js/bootstrap.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/underscore-min.js"></script>
   <script src="app.js"></script>
