home pages styles and Ui changes

--- a/app/details/details.html
+++ b/app/details/details.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
     <h1>{{record.detail2}} - {{record.detail4}}</h1>
     <h2><a href="javascript:void(0);">Approve</a></h2>
     <h2><a href="javascript:void(0);">Reject</a></h2>
