home pages and details page styles and Ui changes

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/login.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/app.css">
-  <link rel='stylesheet' href='bower_components/angular-loading-bar/build/loading-bar.min.css' type='text/css' media='all' />
+  <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.min.css" type="text/css" media="all" />
 </head>
 <body>
   <div ng-view></div>
