--- a/app/details/details.html
+++ b/app/details/details.html
@@ -1,57 +1,53 @@
 <div class="container">
-    <h1>{{record.detail2}} - {{record.detail4}}</h1>
-    <h2><a href="javascript:void(0);" ng-click="onActionClick(true)">Approve</a></h2>
-    <h2><a href="javascript:void(0);" ng-click="onActionClick(false)">Reject</a></h2>
-    <div style="display: inline-block" >
-        <h1>History</h1>
-        <div>
+    <h1 style="color:#183b6b">{{record.detail2}} - {{record.detail4}}</h1>
+    <h3 style=""><a href="javascript:void(0);" ng-click="onActionClick(true)">Approve</a></h3>
+    <h3 style=""><a href="javascript:void(0);" ng-click="onActionClick(false)">Reject</a></h3>
+    <div class="row">
+     	<div class="wrapper">
+        	<div class="span4">
+                <h4>History</h4>
+                    <div class="card radius shadowDepth1">
+                        <div class="card__content card__padding">
+                            <article class="card__article" ng-repeat="item in history">
+                                <p>Requested by : <span style="font-weight: 300;">{{item.user}}</span></p>
+                                <p>Requested date : <span style="font-weight: 300;">{{item.time}}</span></p>
+                                <hr>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="wrapper">
-                <div class="card radius shadowDepth1">
-                    <div class="card__content card__padding">
-                        <article class="card__article" ng-repeat="item in history">
-                            <p>Requested by : <span style="font-weight: 300;">{{item.user}}</span></p>
-                            <p>Requested date : <span style="font-weight: 300;">{{item.time}}</span></p>
-                            <hr>
-                        </article>
+            	<div class="span4">
+                <h4>Detail</h4>
+                    <div class="card radius shadowDepth1">
+                        <div class="card__content card__padding">
+                            <article class="card__article">
+                                <p>{{record.label4}} : <span style="font-weight: 300;">{{record.detail4}}</span></p>
+                                <p>{{record.label0}} : <span style="font-weight: 300;">{{record.detail0}}</span></p>
+                                <p>{{record.label1}} : <span style="font-weight: 300; color:#183b6b;">{{record.detail1}}</span></p>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="wrapper">
+            	<div class="span4">
+                	<h4>Lines</h4>
+                    <div class="card radius shadowDepth1">
+                        <div class="card__content card__padding">
+                            <article class="card__article" ng-repeat="item in lines">
+                                <p>Item ID : <span style="font-weight: 300;">{{item.ItemId}}</span></p>
+                                <p>Item Name : <span style="font-weight: 300;">{{item.ItemName}}</span></p>
+                                <p>Line No : <span style="font-weight: 300;">{{item.LineNo}}</span></p>
+                                <p>PO Price : <span style="font-weight: 300; color:#183b6b;">{{item.POPrice}}</span></p>
+                                <p>PO Quantity : <span style="font-weight: 300;">{{item.POQty}}</span></p>
+                                <p>Vendor : <span style="font-weight: 300;">{{item.Vendor}}</span></p>
+                                <hr>
+                            </article>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div style="display: inline-block" >
-        <h1>Detail</h1>
-        <div>
-            <div class="wrapper">
-                <div class="card radius shadowDepth1">
-                    <div class="card__content card__padding">
-                        <article class="card__article">
-                            <p>{{record.label4}} : <span style="font-weight: 300;">{{record.detail4}}</span></p>
-                            <p>{{record.label0}} : <span style="font-weight: 300;">{{record.detail0}}</span></p>
-                            <p>{{record.label1}} : <span style="font-weight: 300;">{{record.detail1}}</span></p>
-                        </article>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div style="display: inline-block" >
-        <h1>Lines</h1>
-        <div>
-            <div class="wrapper">
-                <div class="card radius shadowDepth1">
-                    <div class="card__content card__padding">
-                        <article class="card__article" ng-repeat="item in lines">
-                            <p>Item ID : <span style="font-weight: 300;">{{item.ItemId}}</span></p>
-                            <p>Item Name : <span style="font-weight: 300;">{{item.ItemName}}</span></p>
-                            <p>Line No : <span style="font-weight: 300;">{{item.LineNo}}</span></p>
-                            <p>PO Price : <span style="font-weight: 300;">{{item.POPrice}}</span></p>
-                            <p>PO Quantity : <span style="font-weight: 300;">{{item.POQty}}</span></p>
-                            <p>Vendor : <span style="font-weight: 300;">{{item.Vendor}}</span></p>
-                            <hr>
-                        </article>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+	</div>
