Details pages approved, raject button styles also add icons to the buttons

--- a/app/details/details.html
+++ b/app/details/details.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h1 style="color:#183b6b">{{record.detail2}} - {{record.detail4}}</h1>
-    <h3 style=""><a href="javascript:void(0);" ng-click="onActionClick(true)">Approve</a></h3>
-    <h3 style=""><a href="javascript:void(0);" ng-click="onActionClick(false)">Reject</a></h3>
+    <h3 class="approved"><a href="javascript:void(0);" ng-click="onActionClick(true)">Approve</a></h3>
+    <h3 class="reject"><a href="javascript:void(0);" ng-click="onActionClick(false)">Reject</a></h3>
     <div class="row">
      	<div class="wrapper">
         	<div class="span4">
